# my-infra-projects

./: .gitignore  CLAUDE.md  README.md  ansible.cfg  devfile.yaml  main.py  munge.key  nfs-server-client.yml  nfs-setup.yml  pyproject.toml  requirements.yml
ansible/: ansible.cfg  requirements.yml
ansible/inventory/: hosts.yml  inventory.example.yml
ansible/inventory/group_vars/: all.yml  nfs_servers.yml  slurmctld.yml  slurmdbdservers.yml  slurmnodes.yml
ansible/playbooks/: docker.yml  nfs.yml  slurm.yml  slurmdbd.yml
ansible/templates/: slurm_nodes.yml.j2
ansible/tests/: test_docker.py  test_nfs.py  test_nfs_client.py  test_nfs_clients.py  test_nfs_server.py  test_slurm.py  test_slurm_nodes.py  test_slurmdbd.py
collections/ansible_collections/myorg/myproject/: README.md  galaxy.yml
inventory/: hosts.yml
inventory/group_vars/: all.yml  nfs_clients.yml  nfs_servers.yml
my-tofu-example/: .terraform.lock.hcl  README.md  main.tf  managed-services.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
my-tofu-example/examples/basic/: main.tf
scripts/: configure.sh  destroy.sh  test.sh  up.sh
tofu/: main.tf
